# ai-validation-infra

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sops.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  README.md  SECURITY.md  docker-compose-minio.yml  pyproject.toml  sonar-project.properties  trivy.yaml
.devcontainer/: bash.cmd  devcontainer.json  ensure-mount-sources  ensure-mount-sources.cmd  postCreateCommand.sh
.devcontainer/local-features/copy-kube-config/: copy-kube-config.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml
.github/workflows/: ci.yml  stale-pr-schedule.yml
apps/ai-act-beslisboom/sandbox/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
apps/ai-act-beslishulp/sandbox/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
apps/ai-verordening-beslishulp/sandbox/: deployment.yaml  ingress-old.yaml  ingress.yaml  kustomization.yaml  service.yaml
apps/amt/base/: cnpg-transformer.yaml  configmap-pgadmin.yaml  deployment-minio.yaml  deployment-pgadmin.yaml  deployment.yaml  horizontalpodautoscaler.yaml  ingress-pgadmin.yaml  ingress.yaml  kustomization.yaml  postgresql-cluster.yaml  postgresql-restore.yaml  pvc-minio.yaml  service-minio.yaml  service.yaml
script/: format.sh  generate-manifests.sh  lint.sh  security.sh  test.sh
tests/amt/: test_amt_overlay_production.py  test_amt_overlay_sandbox.py
tests/tad/: test_overlay_staging.py  test_tad_overlay_production.py  test_tad_overlay_sandbox.py
tests/vault/: test_vault_overlay_production.py
(+100 files in other folders)
